@@ -4,7 +4,7 @@
 
 // general properties for CI execution
 static String NODE_POOL() { return "slaves-stable" }
-static String MAVEN_DOCKER_IMAGE() { return "maven:3.5.3-jdk-8-slim" }
+static String MAVEN_DOCKER_IMAGE() { return "maven:3.6.1-jdk-8-slim" }
 static String DIND_DOCKER_IMAGE() { return "docker:18.06-dind" }
 
 static Boolean isValidReleaseVersion(releaseVersion) {
@@ -45,12 +45,6 @@ spec:
         valueFrom:
           resourceFieldRef:
             resource: limits.cpu
-      # every JVM process will get a 1/2 of HEAP from total memory
-      - name: JAVA_TOOL_OPTIONS
-        value: |
-          -XX:+UnlockExperimentalVMOptions
-          -XX:+UseCGroupMemoryLimitForHeap
-          -XX:MaxRAMFraction=\$(LIMITS_CPU)
       - name: TZ
         value: Europe/Berlin
     resources:
